Changes based on code review by mister Stian S.